fieldx/tests/uncompilable/1.78+serde,sync,async-lock/deserialize_off.stderr
warning: unused import: `Deserialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Foo: Deserialize<'_>` is not satisfied
 --> tests/uncompilable/deserialize_off.rs
  |
  |     let _json = serde_json::from_str::<Foo>(r#"{"v": "whatever"}"#);
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `Foo`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `Foo` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
note: required by a bound in `serde_json::from_str`
 --> $CARGO/serde_json-1.0.140/src/de.rs
  |
  | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
  |        -------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
